proj1/tests/correct/overloadfunction.py
def A():
    pass
def A(a):
    pass
print 'str'

