proj1/tests/error/nestedDef.py
if True:
    def A():
        pass
print 'str'

